# apps

./: README.md  app_info.py  apps.service  main.py  pyproject.toml  restart
notebooks/: econ.py  garage.py
templates/: home.html
